# outofOffice

./: .gitattributes  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css
apps/desktop/src/components/: calculate-editor.tsx  home-screen.tsx  present-editor.tsx  write-editor.tsx
apps/desktop/src/lib/: native.ts  sanitize.ts
apps/desktop/src/stores/: editor-store.ts
apps/desktop/tests/: memory.spec.ts  vertical-slice.spec.ts
docs/: architecture.md  calculate-module.md  dependency-licenses.txt  file-formats.md  office-compatibility.md  performance.md  present-module.md  release-process.md  roadmap.md  security.md  windows-build.md  write-module.md
fixtures/: README.md  korean-english.csv
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  package.rs  storage.rs
